Commit for selector -CSS

--- a/index.html
+++ b/index.html
@@ -1,10 +1,43 @@
 <html>
     <head>
-        <title>
-            this is to check the GIT!! and about CSS basic app
-        </title>
+        <title>Simple Selector - Select elements based on name, id and class</title>
+        <style>
+            h1 /* Selector  */
+            {  /* Declaration */
+                /* : (colon) is a seperator */
+                background-color: yellow;
+                font-size: x-large;
+            }
+             p /* Selector  */
+             {/* Declaration */
+                color: rgb(188, 243, 99);
+                font-size: x-large;
+                background-color: rosybrown;
+             }
+             table 
+             {
+
+             }
+
+             .userTable {
+                background-color: salmon;
+             }
+
+             #dvInfo >p {
+                color:blue;
+             }
+        </style>
     </head>
     <body>
-        This is to learn CSS BASIC components
+        <h1>Simple Selector - Select elements based on name, id and class</h1>
+        <p>This is paragraph</p>
+        <table class="userTable">
+            <tr>
+                <td>Hello</td>
+            </tr>
+        </table>
+        <div id="dvInfo">
+            <p>This is paragraph inside DIV</p>
+        </div>
     </body>
 </html>
